--- a/composer.json
+++ b/composer.json
@@ -39,11 +39,14 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/" 
         },
         "classmap": [
             "database/seeds",
             "database/factories"
+        ],
+        "files": [
+            "app/helpers/helpers.php"
         ]
     },
     "autoload-dev": {
